fixed small bug that prevented word wrapping

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -13,9 +13,5 @@
 }
 
 .tabbed {
-    white-space: pre;
-}
-
-.break {
-    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
